Changed matrix to be sparse resulting in memory savings